--- a/Review_LLM.ipynb
+++ b/Review_LLM.ipynb
@@ -194,15 +194,7 @@
     }
    },
    "source": [
-    "\n",
-    "# Beyond the LLM\n",
-    "\n",
-    "\n",
-    "- [PreTrain_Prompt_Predict](NLP_Beyond_LLM.ipynb)\n",
-    "- [From LLM to Bing Search](From_GPT_to_BingSearch.ipynb)\n",
-    "\n",
-    "\n",
-    "##  Universal API/In-context Learning \n",
+    "#  Universal API/In-context Learning \n",
     "\n",
     "In addition to a Large Language Model easily adapting to a new task via Fine-Tuning\n",
     "- LLM's seem to have the ability to solve new Target tasks\n",
@@ -219,7 +211,22 @@
     "- [Experiment in In context learning: Colab](https://colab.research.google.com/github/kenperry-public/ML_Advanced_Fall_2023/blob/master/HF_inference_play.ipynb)\n",
     "- [Experiment in In context learning: local](HF_inference_play.ipynb)\n",
     "\n",
-    "<!--- #include (squad_show.csv) --->\n"
+    "<!--- #include (squad_show.csv) --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Beyond the LLM\n",
+    "\n",
+    "\n",
+    "- [PreTrain_Prompt_Predict](NLP_Beyond_LLM.ipynb)\n",
+    "- [From LLM to Bing Search](From_GPT_to_BingSearch.ipynb)"
    ]
   },
   {
