--- a/TF_Data_API.ipynb
+++ b/TF_Data_API.ipynb
@@ -92,7 +92,7 @@
     "- consisting of *components*\n",
     "- components may be\n",
     "    - `tuple`, `dict`\n",
-    "    - **not** `list\n",
+    "    - **not** `list`\n",
     "\n",
     "The type/structure of an *element* will depend on the format in which your model expects inputs."
    ]
