--- a/LLM_Instruction_Following.ipynb
+++ b/LLM_Instruction_Following.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
    "outputs": [
@@ -49,7 +49,6 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
-       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -160,14 +159,9 @@
     }
    },
    "source": [
-    "# Which Pre-Trained Transformer Model to use for Fine-Tuning ?\n",
+    "**References**\n",
     "\n",
-    "In choosing a pre-trained Transformer model, there are many choices\n",
-    "- Architecture type: Encoder, Decoder, Encoder/Decoder\n",
-    "- Size\n",
-    "- Training set\n",
-    "\n",
-    "We offer some guidelines, assuming our goal is to Fine-Tune the Pre-Trained model to a new Target task."
+    "[InstructGPT paper](https://arxiv.org/pdf/2203.02155.pdf)"
    ]
   },
   {
@@ -178,192 +172,209 @@
     }
    },
    "source": [
-    "# Architecture\n",
+    "# Instruction following\n",
     "\n",
-    "## Encoder\n",
+    "An LLM is trained in a text-completion task: predict the next token.\n",
     "\n",
-    "An Encoder converts the sequence $\\x_{(1:\\bar T)}$ to the sequence $\\bar\\h_{(1:\\bar T)}$\n",
-    "- transforming the \"raw\" sequence (each position in isolation)  $\\x_{(1:\\bar T)}$\n",
-    "- into the \"processed\" sequence  $\\bar\\h_{(1:\\bar T)}$\n",
+    "Through the [Universal Model](NLP_Universal_Model.ipynb)\n",
+    "we can transform many other tasks into instances of text-completion.\n",
     "\n",
-    "The salient feature of the Encoder is the *unmasked* Attention.\n",
-    "- $\\bar\\h_{(\\bar \\tt)}$: the *contextualized representation* at position $\\bar \\tt$ \n",
-    "    - is a function of the entire input  $\\x_{(1:\\bar T)}$\n",
-    "\n",
-    "That is: the output positions are *context-sensitive* representations.\n",
-    "- where the context include everything prior to and after position $\\bar \\tt$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "For example: the position corresponding to the word \"it\"\n",
-    "- in each of the two sentences\n",
-    "- is ambiguous in the raw sequence\n",
-    "- is unambiguous in the processed sequence\n",
-    "    - it has been informed by the tokens preceding and following its position\n",
-    "    \n",
-    "<table>\n",
-    "    <tr>\n",
-    "        <th><center>Attention weights</center></th>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><center>Thickness of the blue lines indicate the strength of attention to other tokens</center></td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><img src=\"https://1.bp.blogspot.com/-AVGK0ApREtk/WaiAuzddKVI/AAAAAAAAB_A/WPV5ropBU-cxrcMpqJBFHg73K9NX4vywwCLcBGAs/s1600/image2.png\" width=80%></td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "        <td><center>Picture from: https://1.bp.blogspot.com/-AVGK0ApREtk/WaiAuzddKVI/AAAAAAAAB_A/WPV5ropBU-cxrcMpqJBFHg73K9NX4vywwCLcBGAs/s1600/image2.png</center></td>\n",
-    "    </tr>   \n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Thus, an Encoder-only model is useful for \n",
-    "- adding contextual information to the raw input\n",
-    "- as a source of a sequence that can be \"pooled\" into a single positions\n",
-    "    - that is a fixed length summary of the entire sequence\n",
-    "    - and thus can be feed to simpler NN layers (e.g., a Fully Connected layer acting as a Classifier)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Decoder\n",
-    "\n",
-    "The Decoder produces an output $\\hat\\y_\\tp$ at each position $\\tt$ that is a\n",
-    "- function of all preceding outputs $\\hat\\y_{(1:\\tt-1)}$\n",
-    "\n",
-    "Thus, the salient features of the Decoder are its *Autogregressive behavior* and *Causal masking*\n",
-    "\n",
-    "This makes it appropriate for\n",
-    "- generative tasks\n",
-    "- where the output positions are generated one position at a time\n",
-    "- and each position is informed *only* by preceding (i.e., previously generated) positions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Encoder/Decoder\n",
-    "\n",
-    "The Encoder/Decoder takes an input $\\x_{(1:\\bar T)}$ and produces an output $\\hat\\y_{(1:T)}$\n",
-    "\n",
-    "The output at each position $\\tt$ is a function of\n",
-    "- $\\x_{(1:\\bar T)}$ using Cross-Attention\n",
-    "    - via the processed input $\\h_{(1:\\bar T)}$\n",
-    "- $\\hat\\y_{(1:\\tt-1)}$ via Self-Attention to the previously generated outputs\n",
-    "\n",
-    "Most useful for Sequence to Sequence tasks where\n",
-    "- the input sequence may be fully accessed at all positions (**no** masking)\n",
-    "- the output sequence is generated autoregressively\n",
-    "    - causal attention to the previously generated output\n",
-    "    - with full access to the \"processed\" input (i.e., output of the Decoder)\n",
-    "    \n",
-    "Examples include\n",
-    "- language translation\n",
-    "- question answering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Some of these tasks might be able to be handled by a Decoder-only architecture using\n",
-    "*Causal with Prefix* Attention\n",
-    "- the conditioning input $\\x_{(1:\\bar T)}$ is prepended to the Decoder output $\\hat\\y_{(1:T)}$\n",
-    "- the Decoder, when producing output $\\hat\\y_\\tp$ at position $\\tt$ has\n",
-    "    - *unmasked* Attention to the conditioning prefix $\\x_{(1:\\bar T)}$\n",
-    "    - *causal masked* Attention to $\\hat\\y_{(1:\\tt-1)}$\n",
-    "    \n",
-    "The full access to all of $\\x_{(1:\\bar T)} at all output positions $\\tt$\n",
-    "- is essentially replicated what the Encoder of an Encoder/Decoder architecture would do"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "<table>\n",
-    "    <tr>\n",
-    "        <center><strong>Forms of Attention</strong></center>\n",
-    "     </tr> \n",
-    "     <tr>   \n",
-    "        <img src=\"images/T5_attention_masks.png\">\n",
-    "    </tr> \n",
-    "    <tr>\n",
-    "        Attribution: https://arxiv.org/pdf/1910.10683.pdf#page=15\n",
-    "    </tr>\n",
-    "</table>\n",
-    " \n",
-    "Per the diagram\n",
-    "- when producing output $\\hat\\y_\\tp$ for $1 \\le \\tt \\le 3$\n",
-    "- the Decoder has access to the conditioning info $\\x_{(1:3)}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Size\n",
-    "\n",
-    "Many models come in different size variations: small, medium, large.\n",
-    "\n",
-    "Obviously the memory size and computing ability of the processor you are using may\n",
-    "influenced your choice of model.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Training set\n",
-    "\n",
-    "Fine-tuning a model that has been pre-trained on\n",
-    "- a larger training set\n",
-    "- that is more similar to the Target task examples\n",
-    "\n",
-    "would seem to be most beneficial for Transfer Learning.\n",
+    "Although the transformations are effective, they are unnatural to a human.\n",
+    "- the format of the transformation may be awkward\n",
+    "- the user may need to create exemplars to demonstrate the input/output relationship\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "For example, if you want an explanation of a topic\n",
+    "- Don't prompt the LLM with \"Explain the Black Scholes pricing formula\"\n",
+    "- Formulate the prompt in text-continuation form: \"The Black Scholes pricing formula states\"\n",
+    "\n",
+    "To make LLM's more human-friendly, \n",
+    "many are *fine-tuned* to exhibit behaviors that are desirable to a human\n",
+    "- avoid harmful or dangerous responses\n",
+    "- instruction following\n",
+    "\n",
+    "We will discuss getting an LLM to exhibit *Instruction Following* behavior in this module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# LLM's struggle with Instruction Following \n",
+    "\n",
+    "The text-completion objective is not sufficient\n",
+    "for achieving Instruction Following behavior.\n",
+    "\n",
+    "Consider the response of GPT-3 (left column) to some Instructions in the chart below\n",
+    "\n",
+    "<img src=\"images/instructGPT_vs_GPT_output.png\">\n",
+    "\n",
+    "Attribution: https://arxiv.org/pdf/2203.02155.pdf#page=15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In the first example, the prompt (in French) is\n",
+    "\n",
+    "    Write a short story about a frog who travels back in time to ancient Greece in French.\n",
+    "\n",
+    "Even if you don't understand French, you can see that each paragraph in the output is highly repetitive.\n",
+    "\n",
+    "In this case, the model may have followed the instruction, but not sufficiently well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In the second example (explain a piece of code)\n",
+    "- the output is not even answer\n",
+    "- it appears to be the answer-part of a multiple-choice question\n",
+    "\n",
+    "In this case, the LLM did not follow the instruction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Fine-tuning an LLM to demonstrate Instruction Following behavior\n",
+    "\n",
+    "The way to extend a pre-trained model's behavior to encompass a new Target task is with Transfer Learning.\n",
+    "\n",
+    "The *Unsupervised Pre-Training + Supervised Fine-Tuning paradigm* is a type of Tranfer Learning\n",
+    "- Adapting a Pre-Trained LLM\n",
+    "- By Fine-Tuning with a small number of examples from the Target task\n",
+    "\n",
+    "To get a LLM to exhibit Instruction Following behavior, we need to have a dataset of examples\n",
+    "that demonstrates Instruction Following."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The examples in this dataset will be pairs\n",
+    "- an Instruction part\n",
+    "    - possibly with Additional Input\n",
+    "- a Target Output part\n",
+    "    - the response\n",
+    "\n",
+    "For example\n",
+    "- an Instruction part $\\x$\n",
+    "   \n",
+    "   \n",
+    "    Instruction: Given a word, find out its length and its number of vowels.\n",
+    "    Input: Word = \"hello\"\n",
+    "  \n",
+    "- a Target Output part $\\y$\n",
+    "    \n",
+    "    \n",
+    "    Output: Length = 5, Number of vowels = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "[InstructGPT](https://arxiv.org/pdf/2203.02155.pdf) is a pre-trained GPT-3 that has been Fine-Tuned on \n",
+    "a dataset that demonstrations of Instruction Following.\n",
+    "\n",
+    "The chart above demonstrating Instruction Following (i.e., the one with the prompt in French to write a story)\n",
+    "- compares the Instruction following of pre-trained GPT-3\n",
+    "- with a Fine-Tuned GPT-3\n",
+    "\n",
+    "The results are more satisfying."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Where do the Instruction Following demonstration examples come from ?\n",
+    "\n",
+    "The demonstration examples for Instruction Following\n",
+    "- were manually constructed by human labelers\n",
+    "\n",
+    "This is a very labor-intensive process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In a separate module\n",
+    "- we will describe several efforts\n",
+    "- to *generate* training examples for the Instruction Following behavior\n",
+    "- using an LLM !\n",
+    "\n",
+    "That is: we use a non-Instruction Following LLM\n",
+    "- to create examples\n",
+    "- on which to train an LLM to follow instructions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
@@ -395,7 +406,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "369.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
