--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -438,19 +438,25 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "\n",
-    "\n",
-    "## Synthetic Data: Autoencoders\n",
+    "# Week 5\n",
     "\n",
     "New major topic: Synthetic data.\n",
     "\n",
     "After last week's \"code-heavy\" modules, we are back to \"theory\" !\n",
     "\n",
-    "We will address several ways to create new examples, staring with the simplest model and moving on to models that are more complex.\n",
+    "We will address several ways to create new examples, starting with the simplest model and moving on to models that are more complex.\n",
+    "\n",
+    "We wrap up by demonstrating a new trend\n",
+    "- using Large Language Models\n",
+    "- to create training data\n",
+    "- to improve Large Language Models !\n",
+    "\n",
+    "## Synthetic Data: Autoencoders\n",
+    "\n",
     "\n",
     "\n",
     "Generating synthetic data using Autoencoders and its variants.\n",
@@ -479,9 +485,7 @@
     "\n",
     "**Further reading**\n",
     "\n",
-    "[Tutorial on VAE](https://arxiv.org/pdf/1606.05908.pdf)\n",
-    "\n",
-    "\n"
+    "[Tutorial on VAE](https://arxiv.org/pdf/1606.05908.pdf)"
    ]
   },
   {
@@ -492,8 +496,6 @@
     }
    },
    "source": [
-    "# Week 5 (tentative)\n",
-    "\n",
     "## Synthetic Data: GANs\n",
     "\n",
     "We introduce a new type of model that can be used to generate synthetic data: the Generative Adversarial Network (GAN).  It uses a competitive process involving two Neural Networks in order to iteratively\n",
@@ -509,7 +511,43 @@
     "**Suggested reading**\n",
     "- [Generative Adversarial Nets](https://arxiv.org/pdf/1406.2661.pdf)\n",
     "- [TensorFlow Tutorial DCGAN](https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/generative/dcgan.ipynb)\n",
-    "    - this is a tutorial from which our code notebook was derived\n"
+    "    - this is a tutorial from which our code notebook was derived"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Synthetic Data: Self-improvement of an LLM by generating examples \n",
+    "\n",
+    "We present a way of synthesizing examples to improve a Large Language Model.  In this case: the examples we create are *text*.\n",
+    "\n",
+    "This is a potential solution to one of the issues with Fine-Tuning a LLM: the lack of sufficient\n",
+    "labeled examples for the Target task.\n",
+    "\n",
+    "- [LLM Instruction Following](LLM_Instruction_Following.ipynb)\n",
+    "- [Synthetic data for Instruction Following](LLM_Instruction_Following_Synthetic_Data.ipynb)\n",
+    "\n",
+    "**Suggested Reading**\n",
+    "\n",
+    "- [InstructGPT paper](https://arxiv.org/pdf/2203.02155.pdf)\n",
+    "- [Self-instruct](https://arxiv.org/pdf/2212.10560.pdf)\n",
+    "- [Self improvement](https://arxiv.org/pdf/2210.11610.pdf)\n",
+    "    - goal is to fine-tune a LLM for question answering\n",
+    "        - without an **a priori** fine-tuning dataset\n",
+    "   - use a LLM to **generate** a fine-tuning dataset\n",
+    "       - Use few-shot, CoT prompts: \n",
+    "           - Input=question; Output=answer + rationale\n",
+    "           - Input=question, LLM generates output\n",
+    "               - multiple outputs\n",
+    "               - extract answer from output\n",
+    "                   - use majority voting on answer to filter responses\n",
+    "                   - hopefully: majority is accurate: \"high confidence\" == fraction of responses that agree ?\n",
+    "       - The high confidence (large fraction of generated responses to a question agree in answer) generated examples become the fine-tuning dataset"
    ]
   },
   {
@@ -545,6 +583,7 @@
     "        - According to the [Scaling laws module](Index_Advanced.ipynb#Transformers:-Scaling)\n",
     "            - we could potentially achieve the same performance of GPT-3 on a *smaller* (less environmentally impactful model)\n",
     "    - [Energy: train vs inference](https://arxiv.org/pdf/2005.14165.pdf#page=39)\n",
+    "    \n",
     "### Alignment\n",
     "\n",
     "Language models show great capabilities but also the potential for harm: biased and offensive generated text, for example.  Can we \"align\" a model's output with human values ?\n",
@@ -601,6 +640,17 @@
     "Adapters\n",
     "- [Parameter Efficient Transfer Learning for NLP](https://arxiv.org/pdf/1902.00751.pdf)\n",
     "- [LLM Adapters](https://arxiv.org/pdf/2304.01933.pdf)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Week 6 (tentative)"
    ]
   },
   {
